[tool.poetry]
name = "video-split"
version = "0.1.0"
description = ""
authors = ["MuhammadMoustafa <engmuhammadmoustafa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
